--- a/src/app/components/content/recipe-detail/recipe-detail.component.scss
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.scss
@@ -48,6 +48,16 @@ h4 {
       max-height: 20vh;
     }
   }
+
+  .verticallyGroupedInformation {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    * {
+      margin-bottom: 1vh;
+    }
+  }
 }
 
 mat-icon {
