add cypress tests

--- a/src/app/components/content/recipe-overview/recipe-overview.component.html
+++ b/src/app/components/content/recipe-overview/recipe-overview.component.html
@@ -6,7 +6,7 @@
     <h4><mat-icon>book</mat-icon>{{ recipe.cookbook }}</h4>
     <div class="rightSide">
       <app-required-time-display
-        *ngIf="this.isRequiredTimeRecipeFeatureEnabled"
+        *ngIf="this.isRequiredTimeRecipeFeatureEnabled()"
         [editable]="false"
         [requiredTime]="recipe.requiredTime"></app-required-time-display>
       <app-rating-display
