--- a/src/app/components/util/required-time-display/required-time-display.component.html
+++ b/src/app/components/util/required-time-display/required-time-display.component.html
@@ -8,7 +8,7 @@
       [hideRequiredMarker]="true">
       <input
         matInput
-        id="timeToCook"
+        id="requiredTime"
         [formControl]="requiredTimeFormControl" />
     </mat-form-field>
     <p *ngIf="!editable">{{ this.requiredTime }} minutes</p>
