--- a/src/app/components/content/recipe-overview/recipe-overview.component.scss
+++ b/src/app/components/content/recipe-overview/recipe-overview.component.scss
@@ -2,8 +2,8 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
   border-radius: 2px;
 }
 
@@ -16,37 +16,37 @@ h1 {
   white-space: nowrap;
   margin: 0;
   font-family: "JetBrains Mono", serif;
+  width: 90%;
+  margin-top: 1vh;
 }
 
 h4 {
   margin: 0;
+  width: 70%;
 }
 
-.container > *:first-child {
+.container > * {
   margin-left: 3%;
-}
-
-.container > *:last-child {
   margin-right: 3%;
-}
-
-.mainInformation {
-  width: 82%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
 }
 
 .additionalInformation {
   display: flex;
-  flex-direction: column;
-  width: 18%;
-  position: relative;
-  align-items: end;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 94%;
+}
 
-  app-rating-display {
-    position: absolute;
-    bottom: 0;
+.rightSide {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: 30%;
+
+  * {
+    margin-left: 2vw;
   }
 }
 
