--- a/src/app/components/sidebar/recipe-form/recipe-form.component.html
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.html
@@ -43,6 +43,11 @@
       [editable]="true"
       (newRating)="updateRating($event)"
       [rating]="recipe.rating"></app-rating-display>
+    <app-required-time-display
+      *ngIf="isRequiredTimeRecipeFeatureEnabled()"
+      [editable]="true"
+      (newRequiredTime)="updateRequiredTime($event)"
+      [requiredTime]="recipe.requiredTime"></app-required-time-display>
   </div>
   <div class="buttons">
     <button
