started working on page number feature

--- a/src/app/components/sidebar/recipe-form/recipe-form.component.html
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.html
@@ -48,6 +48,11 @@
       [editable]="true"
       (newRequiredTime)="updateRequiredTime($event)"
       [requiredTime]="recipe.requiredTime"></app-required-time-display>
+    <app-page-number-display
+      *ngIf="isPageNumberRecipeFeatureEnabled()"
+      [editable]="true"
+      (newPageNumber)="updatePageNumber($event)"
+      [pageNumber]="recipe.pageNumber"></app-page-number-display>
   </div>
   <div class="buttons">
     <button
