adjust styling to improve space usage

--- a/src/app/components/sidebar/recipe-form/recipe-form.component.html
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.html
@@ -42,11 +42,13 @@
       *ngIf="isRatingRecipeFeatureEnabled()"
       [editable]="true"
       (newRating)="updateRating($event)"
+      [singleRow]="true"
       [rating]="recipe.rating"></app-rating-display>
     <app-required-time-display
       *ngIf="isRequiredTimeRecipeFeatureEnabled()"
       [editable]="true"
       (newRequiredTime)="updateRequiredTime($event)"
+      [singleRow]="true"
       [requiredTime]="recipe.requiredTime"></app-required-time-display>
     <app-page-number-display
       *ngIf="isPageNumberRecipeFeatureEnabled()"
