--- a/src/app/components/util/required-time-display/required-time-display.component.scss
+++ b/src/app/components/util/required-time-display/required-time-display.component.scss
@@ -9,6 +9,15 @@
   }
 }
 
+.singleRow {
+  flex-direction: row;
+  align-items: baseline;
+
+  .content {
+    margin-left: 0.4vw;
+  }
+}
+
 .content {
   display: flex;
   flex-direction: row;
