--- a/src/app/components/util/rating-display/rating-display.component.scss
+++ b/src/app/components/util/rating-display/rating-display.component.scss
@@ -3,6 +3,15 @@
   height: 100%;
 }
 
+.singleRow {
+  display: flex;
+  flex-direction: row;
+
+  .stars {
+    margin-left: 0.4vw;
+  }
+}
+
 .filledStar {
   color: gold;
 }
