add search field to edit recipes overview

--- a/src/app/components/sidebar/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/sidebar/edit-recipes/edit-recipes.component.html
@@ -1,5 +1,12 @@
 <div class="container">
   <h1>Edit / Delete Recipes</h1>
+  <mat-form-field class="searchRecipeFormField">
+    <input
+      matInput
+      id="recipeSearch"
+      placeholder="Search for Recipes"
+      [formControl]="searchRecipeFormControl" />
+  </mat-form-field>
   <div class="tableBackground tableContainer">
     <table
       mat-table
