--- a/src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
+++ b/src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
@@ -12,6 +12,10 @@
     font-size: 1.6rem;
     text-align: center;
   }
+
+  .searchRecipeFormField {
+    width: 70%;
+  }
 }
 
 .action {
@@ -20,7 +24,7 @@
 }
 
 .tableContainer {
-  height: 90%;
+  height: 85%;
   width: 90%;
 
   table {
@@ -32,12 +36,12 @@
 
 @media screen and (max-width: 1300px) {
   .tableContainer {
-    height: 86%;
+    height: 81%;
   }
 }
 
 @media screen and (max-width: 1630px) {
   .tableContainer {
-    height: 86%;
+    height: 81%;
   }
 }
