angular material mdc migration button

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -57,9 +57,10 @@ button {
   height: 5vh;
   align-content: center;
   text-align: center;
+  padding: 0;
 }
 
-.mat-icon-button {
+.mat-mdc-icon-button {
   border-radius: 0;
 }
 
