--- a/src/app/components/util/toolbar/toolbar.component.scss
+++ b/src/app/components/util/toolbar/toolbar.component.scss
@@ -6,7 +6,9 @@
   justify-content: space-between;
 
   button {
+    padding: 0;
     padding-right: 15px;
+    font-size: 1rem;
     -webkit-app-region: no-drag;
     height: 20px;
     margin: 0;
