--- a/src/styles.scss
+++ b/src/styles.scss
@@ -158,8 +158,9 @@ app-toolbar .mat-mdc-icon-button {
   line-height: 20px;
 }
 
-.mat-snack-bar-container {
+.mat-mdc-snack-bar-container {
   background-color: #6ba862;
   color: white;
   width: 100%;
+  border-radius: 4px;
 }
